# dfreport

./: .gitignore  LICENSE  README.md  pyproject.toml
dfreport/: __init__.py  charts.py  columns.py  plotly_bundle.py  report.py
dfreport/templates/: base.html
examples/earthquakes/: 02_earthquakes.ipynb
examples/penguins/: 01_penguins.ipynb
tests/: test_columns.py  test_report.py
