[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "dfreport"
version     = "0.1.0"
description = "DataFrame → self-contained offline HTML report with interactive filters and Plotly charts"
readme      = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5",
    "plotly>=5.0",
]

[project.optional-dependencies]
dev = ["pytest", "numpy", "ruff", "mypy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["dfreport*"]

[tool.setuptools.package-data]
dfreport = ["templates/*.html"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["dfreport"]
force-single-line = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
